--- a/README
+++ b/README
@@ -3,6 +3,7 @@ README
 Project for Picker 3D clone.
 
 You can use the cog icon on the upper left to go into level editing mode. 
+The buttons on the left indicate which level you want to edit.
 Select the balls to add or delete and then to apply the changes to save. 
 Press the cog icon on the lower right to go back to your game and play the levels you created.
 Once you close the game and start it up again your levels will be gone.
